--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,7 @@ development:
   adapter: postgresql
   encoding: unicode
   database: car_listing_development
+  host: localhost
   username: TD
   password: 
   
@@ -18,6 +19,7 @@ test:
   adapter: postgresql
   encoding: unicode
   database: car_listing_test
+  host: localhost
   username: TD
   password: 
 
