Remove first slash in config/database.yml in .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,11 @@
 /log/*.log
 /tmp
 
-/config/database.yml
+
+config/database.yml
+
 .DS_Store
 TODO.md
 
 # Ignore application configuration
 /config/application.yml
-
-/config/database.yml
